Fixing prettier issues
