# src/handlers/createPollVote.ts
@@ -1,13 +1,15 @@
+import { createPollVote } from '../services/pollVotes';
+
 export async function createPollVoteHandler(req: any, res: any) {
   try {
-    const { pollId } = req.params;
+    const { pollId, optionId } = req.body;
 
-    // Add logic to create the poll vote.
+    await createPollVote(pollId, optionId);
 
-    return res.status(201).send({});
+    return res.status(201).send();
   } catch (error) {
     console.log('Error creating poll vote.');
     console.debug({ error });
-    return res.status(400).send();
+    return res.status(400).send('Failed to create poll vote.');
   }
 }
